<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".presentation.auth.RegistrationFragment">

    <TextView
        android:id="@+id/reg_title"
        style="@style/textLarge"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:background="@color/purple"
        android:gravity="center_vertical"
        android:paddingStart="18dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="22dp"
        android:paddingTop="28dp"
        android:paddingEnd="22dp"
        android:paddingBottom="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_title">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/textMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/first_name_field"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_button"
                android:ems="10"
                android:hint="@string/enter_first_name"
                android:inputType="textPersonName" />

            <TextView
                style="@style/textMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="4dp"
                android:text="@string/second_name" />

            <EditText
                android:id="@+id/second_name_field"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_button"
                android:ems="10"
                android:hint="@string/enter_second_name"
                android:inputType="textPersonName" />

            <TextView
                style="@style/textMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="4dp"
                android:text="@string/role" />

            <EditText
                android:id="@+id/role_field"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_button"
                android:ems="10"
                android:hint="@string/enter_role"
                android:inputType="textPersonName" />

            <TextView
                style="@style/textMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="4dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/role_field2"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_button"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textPersonName" />

            <TextView
                style="@style/textMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="4dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/role_field3"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_button"
                android:ems="10"
                android:hint="@string/create_password"
                android:inputType="textPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/cancel_button"
            style="@style/button.secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/secondary_button_ripple"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/done_button"
            style="@style/button.primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/primary_button_ripple"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toEndOf="@+id/cancel_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>